--- a/TagFramework.csproj
+++ b/TagFramework.csproj
@@ -8,4 +8,8 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\OddleSharp\OodleSharp\OodleSharp.csproj" />
+  </ItemGroup>
+
 </Project>
