--- a/TagFramework.csproj
+++ b/TagFramework.csproj
@@ -12,4 +12,13 @@
     <ProjectReference Include="..\OddleSharp\OodleSharp\OodleSharp.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="files\outtest9.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="files\tagnames.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
